fixed mobile spacing for iphones

--- a/public_html/stylesheet.css
+++ b/public_html/stylesheet.css
@@ -6,7 +6,8 @@ body {
 .landing {
 	background: url("images/pwp-backdrop.png") no-repeat center center fixed;
 	margin-top: 10px;
-	padding: 10rem;
+	min-height: 70vh;
+	/*padding: 10rem;*/
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
@@ -22,6 +23,14 @@ body {
 
 .contact-pic{
 	max-height: 100%; position: absolute;
+}
+
+.foot {
+	max-width: 80%;
+}
+
+.h1-padding{
+	padding-top: 25vh;
 }
 
 /*@media (min-width: 2560px) {*/
